Fix padding on landing page and bug where menu was overflowing header

--- a/editor/static/editor/css/style.css
+++ b/editor/static/editor/css/style.css
@@ -16,7 +16,7 @@
 
 /* Landing page styling */
 .navbar {
-    height: 70px;
+    min-height: 70px;
     border-bottom: 1px solid #ebeaeb;
 }
 .branding > h1 {
